--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>commonsfeed.us - Push your awesome activities on Wikimedia Commons to Facebook!</title>
-        <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.0/cerulean/bootstrap.min.css" rel="stylesheet" />
+        <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.0/simplex/bootstrap.min.css" rel="stylesheet" />
     </head>
 
     <body>
