Added attribution on footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,11 @@
     <head>
         <title>commonsfeed.us - Push your awesome activities on Wikimedia Commons to Facebook!</title>
         <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.0/simplex/bootstrap.min.css" rel="stylesheet" />
+        <style>
+            #footer {
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
@@ -11,7 +16,7 @@
                 <h2>Coming soon</h2>
             </div>
             <div class="row">
-                <div id="footer" class="span12"><small>Code by Yuvi Panda, with the awesome Sage Ross for inspiration and support</small></div>
+                <div id="footer" class="span12"><small>Code by <a href="http://yuvi.in">Yuvi Panda</a>, with the awesome <a href="http://ragesoss.com">Sage Ross</a> for inspiration and support</small></div>
             </div>
         </div>
     </body>
