Initial Facebook Login button

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,47 @@
             #footer {
                 text-align: center;
             }
+            #fblogin-container {
+                min-height: 200px;
+            }
+            .right {
+                text-align: right;
+            }
         </style>
     </head>
 
     <body>
+        <div id="fb-root"></div>
+            <script>
+              // Additional JS functions here
+              window.fbAsyncInit = function() {
+                FB.init({
+                  appId      : '545467088820536', // App ID
+                  channelUrl : '//commonsfeed.us/channel.html', // Channel File
+                  status     : true, // check login status
+                  cookie     : true, // enable cookies to allow the server to access the session
+                  xfbml      : true  // parse XFBML
+                });
+
+              };
+
+              // Load the SDK Asynchronously
+              (function(d){
+                 var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+                 if (d.getElementById(id)) {return;}
+                 js = d.createElement('script'); js.id = id; js.async = true;
+                 js.src = "//connect.facebook.net/en_US/all.js";
+                 ref.parentNode.insertBefore(js, ref);
+               }(document));
+            </script>
         <div class="container">
-            <div class="hero">
-                <h1>Push your awesome work on Wikimedia commons to Facebook!</h1>
-                <h2>Coming soon</h2>
+            <div class="row">
+                <div class="span4 right">
+                    <h3>Login with Facebook</h3>
+                </div>
+                <div id="fblogin-container" class="span8">
+                    <div class="fb-login-button" data-show-faces="true" data-width="200" data-max-rows="1"></div>
+                </div>
             </div>
             <div class="row">
                 <div id="footer" class="span12"><small>Code by <a href="http://yuvi.in">Yuvi Panda</a>, with the awesome <a href="http://ragesoss.com">Sage Ross</a> for inspiration and support</small></div>
