Update to new namespace

--- a/templates/shim.html
+++ b/templates/shim.html
@@ -1,7 +1,7 @@
 <html>
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# wikiactivity: http://ogp.me/ns/fb/wikiactivity#">
         <meta property="fb:app_id"            content="545467088820536" /> 
-        <meta property="og:type"              content="wikiactivity:media_file" /> 
+        <meta property="og:type"              content="commonsfeed:media_file" /> 
         <meta property="og:url"               content="{{current_url}}" /> 
         <meta property="og:title"             content="{{display_title}}" /> 
         <meta property="og:image"             content="{{image_url}}" /> 
