--- a/templates/shim.html
+++ b/templates/shim.html
@@ -5,7 +5,7 @@
         <meta property="og:url"               content="{{current_url}}" /> 
         <meta property="og:title"             content="{{display_title}}" /> 
         <meta property="og:image"             content="{{image_url}}" /> 
-        <meta property="wikiactivity:license" content="CC BY-SA" /> 
+        <meta property="commonsfeed:license" content="CC BY-SA" /> 
         <script>
             window.location.href = "{{commons_url}}";
         </script>
