Moved CSS to static file

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,30 +3,8 @@
     <head>
         <title>commonsfeed.us - Push your awesome activities on Wikimedia Commons to Facebook!</title>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-        <style>
-            #footer {
-                text-align: center;
-            }
-            .right {
-                text-align: right;
-            }
-            .starting #starting {
-                display: block;
-            }
-            .no-facebook #facebook-state {
-                display: block;
-            }
-            .no-commons #commons-state {
-                display: block;
-            }
-            .authenticated #authenticated-state {
-                display: block;
-            }
-            .not-shown {
-                display: none;
-            }
-        </style>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" />
+        <link href="/static/main.css" rel="stylesheet" />
     </head>
 
     <body>
